cmake_minimum_required(VERSION 3.31)
project(Programming_Using_CPP_Level_1_by_Programming_Advices)

set(CMAKE_CXX_STANDARD 26)

add_executable(_1_syntax src/_1_syntax/SyntaxLesson.cpp)
add_executable(_2_output_OutputLessonFirstHomework.cpp src/_2_output/OutputLessonFirstHomework.cpp)
add_executable(_2_output_OutputLessonSecondHomework.cpp src/_2_output/OutputLessonSecondHomework.cpp)
add_executable(_2_output_OutputLessonThirdHomework.cpp src/_2_output/OutputLessonThirdHomework.cpp)
add_executable(_2_output_OutputLessonFourthHomework.cpp src/_2_output/OutputLessonFourthHomework.cpp)
add_executable(_3_omitting_namespace_OmittingNamespaceLesson.cpp src/_3_omitting_namespace/OmittingNamespaceLesson.cpp)
add_executable(_4_comments_CommentsLesson.cpp src/_4_comments/CommentsLesson.cpp)